--- a/PinPSafe/Base.lproj/Main.storyboard
+++ b/PinPSafe/Base.lproj/Main.storyboard
@@ -22,12 +22,24 @@
                                     <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="SGC-Hb-ax4"/>
                                 </connections>
                             </slider>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b0e-I4-BKi">
+                                <rect key="frame" x="314" y="762" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="YGG-po-X13"/>
+                                    <constraint firstAttribute="height" constant="100" id="doW-FR-Adm"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="UJQ-0m-091" kind="embed" id="S2n-5n-nLE"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="jfp-nL-WA7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="22" id="1cW-RT-Gw9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jfp-nL-WA7" secondAttribute="trailing" constant="20" id="Pz5-Hx-PQq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b0e-I4-BKi" secondAttribute="trailing" id="bi5-gr-7Z6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b0e-I4-BKi" secondAttribute="bottom" id="czi-mj-D5O"/>
                             <constraint firstItem="jfp-nL-WA7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yKp-Wo-yvX"/>
                         </constraints>
                     </view>
@@ -39,8 +51,35 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
         </scene>
+        <!--Button View Controller-->
+        <scene sceneID="wFI-lN-Ret">
+            <objects>
+                <viewController id="UJQ-0m-091" customClass="ButtonViewController" customModule="PinPSafe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="90C-G5-WXz">
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2U7-lo-pZh">
+                                <rect key="frame" x="20" y="20" width="60" height="60"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system"/>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="2U7-lo-pZh" firstAttribute="top" secondItem="90C-G5-WXz" secondAttribute="top" constant="20" id="Az0-ra-2We"/>
+                            <constraint firstAttribute="bottom" secondItem="2U7-lo-pZh" secondAttribute="bottom" constant="20" id="EdE-ts-p8H"/>
+                            <constraint firstItem="2U7-lo-pZh" firstAttribute="leading" secondItem="90C-G5-WXz" secondAttribute="leading" constant="20" id="GV4-3k-OVg"/>
+                            <constraint firstAttribute="trailing" secondItem="2U7-lo-pZh" secondAttribute="trailing" constant="20" id="qDE-Go-mUe"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ph-Gw-Ata" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-77" y="563"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
